--- a/quiz-client/package.json
+++ b/quiz-client/package.json
@@ -19,6 +19,16 @@
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --write"
+    ]
+  },
+  "husky": {
+     "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
